--- a/files/s2020exam2-viewonly.html
+++ b/files/s2020exam2-viewonly.html
@@ -2,29 +2,14 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Quiz Viewer</title>
-    <link rel="stylesheet" href="s2020exam2-viewonly_files/style.css">
+    <link rel="stylesheet" href="style.css">
         <style>
         body { background:#fdb; }
         .directions, .multiquestion { background: #fed;  }
     </style>
-        <link rel="stylesheet" href="s2020exam2-viewonly_files/katex.min.css">
-
-    <script>
-function onload() {
-    if (document.getElementById('clock')) {
-        var remaining = Number(document.getElementById('clock').innerHTML);
-        due += remaining * 1000;
-        timer = setInterval(tick, 1000);
-    }
-}
-
+        <link rel="stylesheet" href="katex.min.css">
     </script>
-<style type="text/css">@media print {
-        .TridactylStatusIndicator {
-            display: none !important;
-        }
-    }</style></head>
-<body onload="onload()">
+<body>
     <a style="text-align:center; display:block;" href="https://www.cs.virginia.edu/luther/COA2/">Return to course page</a><a href="https://kytos02.cs.virginia.edu/coa2/quizzes/" style="text-align:center; display:block;">Return to index</a><h1 style="text-align:center">Midterm</h1><div class="directions"><p>You
  may use any resource that existed prior to this exam opening, including
  websites, books, etc; but should not consult friends, tutors, forums, 
@@ -241,4 +226,3 @@ instructions always runs atomically; that is, that the result of running
 <!--<center><a href="../">Return to course page</a></center>-->
 
 
-<span class="cleanslate TridactylStatusIndicator TridactylModenormal" style="border: #ff9f00 solid 1.5px !important">normal</span></body><iframe class="cleanslate hidden" src="s2020exam2-viewonly_files/commandline.html" id="cmdline_iframe" loading="lazy" style="height: 0px !important;"></iframe></html>
