--- a/files/s2020final-viewonly.html
+++ b/files/s2020final-viewonly.html
@@ -2,29 +2,15 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Quiz Viewer</title>
-    <link rel="stylesheet" href="s2020final-viewonly_files/style.css">
+    <link rel="stylesheet" href="style.css">
         <style>
         body { background:#fdb; }
         .directions, .multiquestion { background: #fed;  }
     </style>
-        <link rel="stylesheet" href="s2020final-viewonly_files/katex.min.css">
+        <link rel="stylesheet" href="katex.min.css">
 
-    <script>
-function onload() {
-    if (document.getElementById('clock')) {
-        var remaining = Number(document.getElementById('clock').innerHTML);
-        due += remaining * 1000;
-        timer = setInterval(tick, 1000);
-    }
-}
-
-    </script>
-<style type="text/css">@media print {
-        .TridactylStatusIndicator {
-            display: none !important;
-        }
-    }</style></head>
-<body onload="onload()">
+    ></head>
+<body>
     <a style="text-align:center; display:block;" href="https://www.cs.virginia.edu/luther/COA2/">Return to course page</a><a href="https://kytos02.cs.virginia.edu/coa2/quizzes/" style="text-align:center; display:block;">Return to index</a><h1 style="text-align:center">Final</h1><div class="directions"><p>You
  may use any resource that existed prior to this exam opening, including
  websites, books, etc; but should not consult friends, tutors, forums, 
