UTF-8 related fixes?

--- a/files/s2024quizzes.html
+++ b/files/s2024quizzes.html
@@ -1,6 +1,7 @@
- 
+<!DOCTYPE html>
     <html>
     <head>
+        <meta charset="UTF-8">
         <title>S2024 quizzes</title>
         <link rel="icon" type="image/svg+xml" href="favicon.svg">
         <link rel="stylesheet" href="style.css">
@@ -30,8 +31,6 @@
     </head>
     <body>
     <h1>S2024 quizzes</h1>
-    
-﻿
 <h1 style='text-align:center'>quiz for week 2</h1><div class='directions'><p>Answer the following questions about the lecture material for this week.</p>
 </div><div class='question' id='q1' slug='dd09f208'><div class='description' id='d1'><strong>Question 1</strong> (4 points)
 <p>Suppose we create a library with a function foo:</p>
