--- a/files/s2024quizzeskey.html
+++ b/files/s2024quizzeskey.html
@@ -1,6 +1,7 @@
- 
+<!DOCTYPE html>
     <html>
     <head>
+        <meta charset="UTF-8">
         <title>Spring 2024 CS 3130 Quiz KEYS</title>
         <link rel="icon" type="image/svg+xml" href="favicon.svg">
         <link rel="stylesheet" href="style.css">
@@ -30,8 +31,6 @@
     </head>
     <body>
     <h1>Spring 2024 CS 3130 Quiz KEYS</h1>
-    
-﻿
 <h1 style='text-align:center'>quiz for week 2</h1><center class='count'>411 people have viewed this quiz</center><div class='directions'><p>Answer the following questions about the lecture material for this week.</p>
 </div><div class='question' id='q1' slug='dd09f208'><div class='description' id='d1'><strong>Question 1</strong> (4 pt; mean 2.95)
 <p>Suppose we create a library with a function foo:</p>
